[tool.poetry]
name = "smm-panel-telegram-bot"
version = "1.0.0"
description = "SmmPanel.ru Telegram bot."
authors = ["Dmitrii Kopeikin <kopeikindp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "smm_panel_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "23.1.0"
aiogram = "3.0.0rc2"
aiohttp-jinja2 = "1.5.1"
aiosignal = "1.3.1"
annotated-types = "0.5.0"
anyio = "3.7.1"
asgiref = "3.7.2"
async-timeout = "4.0.3"
attrs = "23.1.0"
blinker = "1.6.2"
callback = "0.0.1"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
click = "8.1.7"
colorama = "0.4.6"
frozenlist = "1.4.0"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
lxml = "4.9.3"
magic-filter = "1.0.11"
markdown = "3.4.4"
markupsafe = "2.1.3"
multidict = "6.0.4"
python-dotenv = "1.0.0"
requests = "2.31.0"
sniffio = "1.3.0"
soupsieve = "2.4.1"
sqlparse = "0.4.4"
starlette = "0.27.0"
typing-extensions = "4.7.1"
tzdata = "2023.3"
urllib3 = "2.0.4"
validators = "0.21.2"
yarl = "1.9.2"
aiocryptopay = "^0.3.2"
httpx = "^0.25.1"
dataclasses-json = "^0.6.2"
babel = "^2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
