[tool.poetry]
name = "smo-service-telegram-bot"
version = "1.0.0"
description = "SmoService Telegram bot."
authors = ["Dmitrii Kopeikin <kopeikindp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "smo_service_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.1.1"
httpx = "0.25.2"
babel = "^2.13.1"
jinja2 = "3.1.2"
python-dotenv = "1.0.0"
aiohttp = "3.8.6"
aiocryptopay = "0.3.3"
validators = "0.22.0"
aiohttp-jinja2 = "1.5.1"


[tool.poetry.group.dev.dependencies]
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
